# iai_common_msgs

attache_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
attache_msgs/msg/: AttachmentConnection.msg  JointConnection.msg
attache_msgs/srv/: Attachment.srv  AttachmentsList.srv  JointControl.srv  JointInformation.srv  JointSetLimits.srv  JointsList.srv
constraint_msgs/: CMakeLists.txt  manifest.xml
constraint_msgs/msg/: Constraint.msg  ConstraintCommand.msg  ConstraintConfig.msg  ConstraintState.msg  Feature.msg  HLConstraint.msg  JointAvoidanceState.msg  MLConstraintHint.msg
constraint_msgs/srv/: ConstraintsRank.srv
data_vis_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
data_vis_msgs/msg/: DataVis.msg  Task.msg  ValueList.msg
designator_integration_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
designator_integration_msgs/msg/: Designator.msg  KeyValuePair.msg
designator_integration_msgs/srv/: DesignatorCommunication.srv
dna_extraction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dna_extraction_msgs/srv/: PerceiveChemLabTool.srv
gazebo_msgs/: CMakeLists.txt  package.xml
grasp_stability_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
grasp_stability_msgs/srv/: Control.srv
iai_common_msgs/: CHANGELOG.rst  package.xml
iai_content_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_control_msgs/msg/: CartGoal.msg  CartState.msg  JointVelocityCommand.msg  JointVelocityImpedanceCommand.msg  PowerState.msg  pose_w_joints.msg
iai_kinematics_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_kms_40_msgs/: CMakeLists.txt  package.xml
iai_kms_40_msgs/srv/: SetTare.srv
iai_pancake_perception_action/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
iai_pepper_demo_msgs/: CMakeLists.txt  package.xml
iai_pepper_demo_msgs/srv/: PepperComm.srv
iai_robosherlock_actions/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_robosherlock_actions/action/: SimplePerceiveObject.action
iai_robosherlock_actions/msg/: PerceivedObject.msg  SimpleObjectPerceptionRequest.msg
iai_robosherlock_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_robosherlock_msgs/action/: HighlightObject.action  SimplePerceiveObject.action
iai_robosherlock_msgs/msg/: PerceivedObject.msg  PerceivedObjects.msg
iai_robosherlock_msgs/srv/: PerceiveObject.srv  PizzaPerceiveObject.srv
iai_tf_relay_msgs/: CMakeLists.txt  package.xml
iai_tf_relay_msgs/action/: BroadcastTf.action
iai_urdf_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_urdf_msgs/action/: AlterUrdf.action
iai_urdf_msgs/srv/: AlterUrdf.srv
iai_wsg_50_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_wsg_50_msgs/msg/: PositionCmd.msg  SpeedCmd.msg  Status.msg
json_prolog_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mln_robosherlock_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mln_robosherlock_msgs/srv/: MLNQuery.srv
onyx_msgs/: CMakeLists.txt  package.xml
onyx_msgs/msg/: MediatedConnection.msg  MediatedServiceRequest.msg  MediatedServiceResponse.msg  MediatorConfig.msg  MediatorControl.msg  OnyxObject.msg
onyx_msgs/srv/: Control.srv  Mediate.srv
person_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
person_msgs/msg/: Person.msg  PointEvents.msg  Skeleton2D.msg  Skeleton3D.msg  SkeletonBBox.msg
planning_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning_msgs/msg/: Binding.msg  Plan.msg  Step.msg
planning_msgs/srv/: Planning.srv
saphari_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
saphari_msgs/msg/: BodyPart.msg  Equipment.msg  GestureData.msg  Human.msg  Humans.msg  PerceivedEquipment.msg
saphari_msgs/srv/: PerceiveEquipment.srv
scanning_table_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
sherlock_sim_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
sherlock_sim_msgs/srv/: TestService.srv
