<?xml version="1.0"?>
<package>
  <name>attache_msgs</name>
  <version>0.0.6</version>
  <description>
    The attache_msgs package
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
</package>
