<?xml version="1.0"?>
<package>
  <name>designator_integration_msgs</name>
  <version>0.0.6</version>
  <description>Message definitions for communicating serialized designators through ROS topics and services.</description>

  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
