<?xml version="1.0"?>
<package>
  <name>iai_common_msgs</name>
  <version>0.0.1</version>
  <description>The iai_common_msgs package</description>
 
  <author>IAI Robotics Group</author>
  <maintainer email="ai-robotics@cs.uni-bremen.de">AI Robotics</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>constraint_msgs</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>mln_robosherlock_msg</run_depend>
  <run_depend>iai_content_msgs</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
