<!--?xml version="1.0"?--> 
<package>
  <name>iai_pancake_perception_action</name>
  <description>
    Action interface to trigger perception of pancake oven and pancake.
  </description>
  <version>0.0.2</version>
  <author>Georg Bartels (georg.bartels@cs.uni-bremen.de)</author>
  <author>Ferenc Balint-Benczedi (catkinization)</author>
  <maintainer email="TODO@TODO.COM">TODO</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
<export>
</export>
</package>


