<!--?xml version="1.0"?--> 
<package>
  <name>iai_robosherlock_actions</name>
  <description>
    Action interfaces to trigger perception via the Robosherlock
    perception system.
  </description>
  <version>0.0.5</version>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author>Ferenc Balint-Benczedi (catkinization)</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>designator_integration_msgs</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>shape_msgs</run_depend>
  <run_depend>designator_integration_msgs</run_depend>


</package>
