<package>
  <name>iai_tf_relay_msgs</name>
  <version>0.0.0</version>
  <description>
    Messages to have a relay broadcast TF transforms.
  </description>

  <license>BSD</license>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
