<?xml version="1.0"?>
<package>
  <name>iai_wsg_50_msgs</name>
  <version>0.0.6</version>
  <description>
    Fork of the driver packages for the Weiss Robotics WSG 50 gripper.
    Maintained by the Institute for Artificial Intelligence, University Bremen.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author>Nicolas Alt</author>
  <author>Robotnik</author>
  <author>Weiss Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
