<?xml version="1.0"?>
<package>
  <name>planning_msgs</name>
  <version>0.0.6</version>
  
  <description>
    
    Plan request and return definitions
    
  </description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
