<!--?xml version="1.0"?-->
<package>
    <name>scanning_table_msgs</name>
  <description>
      catkinized common interface for turn table
  </description>
  <version>0.0.6</version>
  <author>Alexis Maldonado</author>
  <author>Ferenc Balint-Benczedi(catkinization)</author>
  <maintainer email="todo@todo.com">TODO</maintainer> 
  <license>GPLv3+</license>
  <buildtool_depend> catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


